feat(deepsearch): 完善深度搜索章节展示与流式执行